# debugger

./: .gitignore  DEBUGGER_PIP_MODULE_CONTEXT.md  README.md  debug.py  ports.conf  publish.sh  pyproject.toml  run.sh
REFACTOR_PLAN/: AGENT_1_BACKEND.md  AGENT_2_BUILD_AND_TYPESCRIPT.md  AGENT_3_REDUX_AND_STYLING.md  AGENT_4_PYPI_AND_CLEANUP.md  OVERVIEW.md
backend/: DebugFile.py  Debugleton.py  Directory.py  File.py  log_config.py  main.py  path_mngr.py  project_scanner.py  requirements.txt  run.sh  server.py
backend/apps/debugger/: debugger.py
backend/apps/health/: health.py
backend/config/: Apps.py
backend/core/: DEFAULTS.py  DebugFile.py  Debugleton.py  Directory.py  File.py  color_adjuster.py  debug_arg_parser.py  log_config.py  log_mode.py  project_scanner.py
backend/core/log/: __init__.py  log_config.py  log_mode.py
backend/core/models/: DebugFile.py  Directory.py  File.py  __init__.py  project_scanner.py
backend/core/utils/: __init__.py  color_adjuster.py  path_mngr.py
backend/data/: debug_toggles.json
frontend/: DESIGN.md  eslint.config.mjs  package-lock.json  package.json  run.sh  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.tsx
frontend/src/app/: Main.tsx
frontend/src/assets/: emojis.js
frontend/src/types/: index.ts
linter/: README.md  config.json  lint.py  print_errors.sh  structlint.json  structlint.py
linter/checks/: eslint.py  knip.py  vulture.py
linter/config/: config.json
swarm_debug/: __init__.py  cli.py  server.py
swarm_debug/apps/debugger/: debugger.py
swarm_debug/apps/health/: health.py
swarm_debug/config/: Apps.py
swarm_debug/core/: DEFAULTS.py  Debugleton.py  data_dir.py  toggle_ops.py
swarm_debug/data/: SKILL.md
(+47 files in other folders)
