[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-debug"
version = "0.1.5"
description = "A colorized, toggleable debug logger with a web GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "typeguard>=4.4",
    "uvicorn[standard]",
]

[project.scripts]
swarm-debug = "swarm_debug.cli:main"

[project.optional-dependencies]
dev = ["vulture"]

[tool.setuptools]
packages = [
    "swarm_debug",
    "backend",
    "backend.config",
    "backend.apps",
    "backend.apps.health",
    "backend.apps.debugger",
    "backend.core",
    "backend.core.models",
    "backend.core.log",
    "backend.core.utils",
]

[tool.setuptools.package-data]
backend = ["debugger_gui_build/**/*"]
